[package]
name = "minecraft-backup-manager"
version = "0.0.0"
edition = "2018"
authors = ["Xendergo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
quartz_nbt = "0.2.*"
flate2 = "1.0.*"
tar = "0.4.*"
anyhow = "1.0.*"
chrono = "0.4.*"
rand = "0.8.*"